[project]
name = "threequick"
dynamic = ["version"]
authors = [
  { name="Hannah Baldwin", email="contact@hannahbaldwin.net" },
]
license = { text="GPL-3.0" }
description = "A simple python library for creating 3D visualisations"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy >= 1.13.3",
    "pygame >= 2.0.0",
]

[project.urls]
Homepage = "https://github.com/habaldwin01/threequick"
Issues = "https://github.com/habaldwin01/threequick/issues"

[tool.setuptools.dynamic]

[tool.setuptools]
packages = ["threequick"]
package-dir = {"" = "src"}

[tool.setuptools_scm]

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"
